--- a/package.json
+++ b/package.json
@@ -2,23 +2,47 @@
   "name": "sabaidea",
   "version": "0.1.0",
   "private": true,
+  "main": "./index.ts",
+  "module": "./dist/index.mjs",
+  "types": "./index.ts",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "next": "13.5.6",
+    "next-translate": "^2.6.2",
+    "next-translate-plugin": "^2.6.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "styled-components": "^6.1.11"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@babel/core": "^7.24.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-react-jsx": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
+    "@babel/preset-typescript": "^7.24.6",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.3.0",
+    "typescript": "^5"
   }
 }
