feat(test) : write test

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "main": "./index.ts",
-  "module": "./dist/index.mjs",
+  "module": "commonjs",
   "types": "./index.ts",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "axios": "^1.7.2",
